--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ p,
     a,
     figcaption,
     span {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
    /* page links */
    ul.page-links {
@@ -117,4 +117,70 @@ nav {
     position: absolute;
     left: 0;
     top: 0;
+}
+.big-image {
+    margin: 0;
+}
+
+.big-image img {
+    width: 100%;
+    height: 200px;
+}
+/*! Table */
+.table {
+    display: table;
+    height: 100%;
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: separate;
+    border-spacing: 10px;
+  }
+  .row {
+    display: table-row;
+ }
+ .col {
+    display: table-cell;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+}
+
+.col p {
+    font-size: 1rem;
+}
+.wrapped {
+    display: block;
+    float: left;
+    padding: 5px;
+}
+/*! cta */
+.cta {
+    width: 11rem;
+    margin: auto;
+    text-align:center;
+}
+.cta-button {
+    display: block;
+    height: 40px;
+    line-height: 40px;
+    background: red;
+    color: white;
+    border-radius: 30px;
+}
+/*! footer */
+footer {
+    background-color: #333;
+    height: 4rem;
+    color: white;
+    padding: 20px;
+    position: relative;
+    width: 100%;
+}
+.footer-left {
+    position: absolute;
+    left: 0.50%;
+}
+
+.footer-right {
+    position: absolute;
+    right: 0.50%;
 }
